--- a/src/index.css
+++ b/src/index.css
@@ -138,7 +138,7 @@ body {
 }
 
 .ai-panel-scrollable::-webkit-scrollbar-track {
-  background: rgba(255, 255, 255, 0.05);
+  background: #00D9FF;
 }
 
 .ai-panel-scrollable::-webkit-scrollbar-thumb {
@@ -218,3 +218,26 @@ body {
     left: 100%;
   }
 }
+
+
+.test::-webkit-scrollbar {
+  width: 8px;
+}
+
+.test::-webkit-scrollbar-track {
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
+}
+
+.test::-webkit-scrollbar-thumb {
+  background: #00D9FF;
+  border-radius: 10px;
+}
+
+.test::-webkit-scrollbar-thumb:hover {
+  background: #9333EA;
+}
+
+
+
+
